# nps-survey

./: .env.example  .gitignore  Dockerfile.local  Makefile  README.md  cloudformation.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
compose/local/: Dockerfile
compose/production/: Dockerfile  docker-entrypoint.sh
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: postman_collection.json
nps/: admin.py  apps.py  models.py  receivers.py  signals.py  urls.py
nps/management/commands/: insert_companies.py  insert_countries.py  insert_nps_data.py
nps/migrations/: 0001_initial.py  0002_initial.py  0003_alter_company_description.py  0004_remove_company_persons_alter_nps_user_and_more.py  0005_remove_nps_user_nps_person.py  0006_nps_metadata.py
nps/serializers/: companies.py  nps.py
nps/services/: __init__.py  companies.py  countries.py  nps.py
nps/tests/: factories.py
nps/tests/e2e/: setup.py  test_companies.py  test_nps.py
nps/tests/unit/: test_companies.py  test_countries.py  test_nps.py
nps/views/: companies.py  nps.py
scripts/: deploy_to_ecr.sh  setup_infra.sh
users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py
utils/: pagination.py  requests.py
